handling for BLE HID reports on nRF52
* renamed `usb_reports` folder -> `hid_reports` and added handling for BLE

--- a/layouts/nrf52_4key.yaml
+++ b/layouts/nrf52_4key.yaml
@@ -19,7 +19,8 @@ layouts:
     layers: [
       [ # layer 0 (base)
         [
-          1, 2, 3, 4
+          # 1, 2, VOLU, VOLD
+          1, 2, MS_D, MS_U
         ]
       ],
     ]
