change travis to target ubuntu 16.04
* Ubuntu 14.04 is passed it's standard support period, so some python
  libraries have stop supporting python versions <3.5. Ubuntu 16.04 has
  python3.5 as default, so use it instead.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ matrix:
   include:
     - os: linux
       sudo: true
-      dist: trusty
+      dist: xenial
       language: c
       addons:
         apt:
@@ -17,7 +17,7 @@ matrix:
       #   -
       install:
         - 'cd env'
-        - './ubuntu-14.04-setup.sh'
+        - './ubuntu-16.04-setup.sh'
         - 'cd ..'
       script:
         # Setup the build environment
