--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
             - libffi-dev
             - python3
             - python3-pip
+            - libhidapi-hidraw0
       # before_install:
       #   -
       install:
