--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
             - python3
             - python3-pip
             - libhidapi-hidraw0
+            - python3-venv
+            - desktop-file-utils
       # before_install:
       #   -
       install:
