add keyplus linux emulator
Linux user-space driver for emulating keyplus on any keyboard.

Stuff that's working:

* Can selectively remap any HID keyboard/mice
* Automatically detects device insertion/removal.
* All the keycodes and macros seem to be working, though tap/hold may be
    a bit buggy atm.
* Parsing layout files. See `layouts/virtual.yaml` as an example layout file.
    Note: `keyplusd` can't read yaml files atm, so need `keyplus-cli` to
    generate a `.bin` file that it can understand.

Somethings left todo:

* Device detection still hard-coded
* Remapping mouse buttons not finished yet
* `keyplus-cli' command to reload the layout file without restarting the daemon

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
             - libhidapi-hidraw0
             - python3-venv
             - desktop-file-utils
+            - libevdev-dev
+            - libudev-dev
       # before_install:
       #   -
       install:
