--- a/ports/linux/Makefile
+++ b/ports/linux/Makefile
@@ -26,7 +26,9 @@ TEST_CONFIG_BIN ?= ./test_conf.bin
 
 USE_HID = 1
 USE_USB = 0
+USE_MOUSE = 1
 USE_SCANNER = 0
+USE_MOUSE_GESTURE = 1
 
 USE_VIRTUAL_MODE = 1
 
