add `keyplusd` user creation to `make install`

--- a/ports/linux/Makefile
+++ b/ports/linux/Makefile
@@ -149,6 +149,7 @@ setup:
 	./setup.sh
 
 install: $(BUILD_TARGET)
+	./setup.sh
 	install -d $(DESTDIR)$(PREFIX)/bin
 	install $(BUILD_TARGET) $(DESTDIR)$(PREFIX)/bin
 	install -d $(DESTDIR)$(PREFIX)/lib/udev/rules.d/
