--- a/ports/linux/etc/systemd/system/keyplusd.service
+++ b/ports/linux/etc/systemd/system/keyplusd.service
@@ -6,6 +6,8 @@ Nice=-10
 User=keyplusd
 Group=keyplusd
 PIDFile=/tmp/keyplusd.lock
+StateDirectory=keyplusd
+StateDirectoryMode=0750
 StandardOutput=null
 StandardError=null
 StandardInput=null
